[package]
name = "zk-wasm"
version = "0.1.0"
authors = ["Matteo Pisani <matteo.pisani.91@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sapling-crypto = { path = "deps/sapling-crypto" }
pairing = { path = "deps/pairing" }
ff = { path = "deps/ff" }
rand = "0.4.6"
hex = "0.4.3"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
num-bigint = "0.4.3"
num-traits = "0.2.15"

[dependencies.bellman]
path = "deps/bellman"

[dependencies.wasm-bindgen]
version = "0.2.86"
features = ["serde-serialize"]
